--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>AURAT</title>
 </head>
 <body>
-    idk btw this is a test
+    Working Progress For Redirect on Github with Source Code https://github.com/OnStage-Aurat/Bordeaux
 </body>
 </html>
