--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>AURAT</title>
 </head>
 <body>
-    Working Progress For Redirect on Github with Source Code https://github.com/OnStage-Aurat/Bordeaux
+    Working Progress For Redirect on Github with Source Code https://github.com/OnStage-Aurat/Bordeaux or use https://onstage-aurat.github.io/github#Bordeaux 
 </body>
 </html>
