Change Index with Source code Redirect

--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
-<html lang="it">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Reindirizzamento in corso...</title>
+    <meta name="description" content="Sito per Gara Robocup">
+    <meta name="keywords" content="">
+    <meta name="author" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AURAT</title>
+    <link rel="icon" href="/favicon.ico">
+    <meta http-equiv="refresh" content="0;URL=https://github.com/OnStage-Aurat/Bordeaux">
+    <script type="text/javascript">
+        window.location.replace("https://github.com/OnStage-Aurat/Bordeaux" + location.hash.substring(1));
+    </script>
 </head>
 <body>
-    Working Progress For Redirect on Github with Source Code https://github.com/OnStage-Aurat/Bordeaux or use https://onstage-aurat.github.io/github#Bordeaux 
+    <p>If you were not automatically redirected, click <a href="https://github.com/OnStage-Aurat/Bordeaux">here</a> to open the redirection page manually.</p>
 </body>
 </html>
