--- a/github/index.html
+++ b/github/index.html
@@ -13,6 +13,6 @@
     </script>
 </head>
 <body>
-    <p>Se non sei stato reindirizzato automaticamente, clicca <a href="https://github.com/OnStage-Aurat">qui</a> per aprire la pagina di reindirizzamento manualmente.</p>
+    <p>If you were not automatically redirected, click <a href="https://github.com/OnStage-Aurat/">here</a> to open the redirection page manually.</p>
 </body>
 </html>
