--- a/github/index.html
+++ b/github/index.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="">
     <meta name="author" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="img/AURAT Logo.png" type="image/png">
     <meta http-equiv="refresh" content="0;URL=https://github.com/OnStage-Aurat">
     <script type="text/javascript">
         window.location.replace("https://github.com/OnStage-Aurat/" + location.hash.substring(1));
