first version home page upload

--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Reindirizzamento in corso...</title>
+    <title>OnStage AURAT</title>
     <meta name="description" content="Sito per Gara Robocup">
     <meta name="keywords" content="">
     <meta name="author" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="img/AURAT Logo.png" type="image/png">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <script src="https://use.fontawesome.com/1ffa770428.js"></script>
 </head>
 <body>
-    <p>If you were not automatically redirected, click <a href="https://github.com/OnStage-Aurat/Bordeaux">here</a> to open the redirection page manually.</p>
+    <header>
+        <iframe width="1920" height="1080" src="https://www.youtube-nocookie.com/embed/MMut8h7lxXY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </header>
+    <footer>
+        <a href="https://github.com/OnStage-Aurat/Bordeaux">Source Codes <i class="fa fa-github" aria-hidden="true"></i></a>
+    </footer>
 </body>
 </html>
