--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
         <iframe width="1920" height="1080" src="https://www.youtube-nocookie.com/embed/MMut8h7lxXY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </header>
     <footer>
-        <a href="https://github.com/OnStage-Aurat/Bordeaux">Source Codes <i class="fa fa-github" aria-hidden="true"></i></a>
+        <a href="https://github.com/OnStage-Aurat/Bordeaux">
+            <div>
+                <p>Source Codes</p>
+                <i class="fa fa-github" aria-hidden="true"></i>
+            </div>
+        </a>
     </footer>
 </body>
 </html>
