--- a/backvideo/index.html
+++ b/backvideo/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Reindirizzamento in corso...</title>
+    <title>Redirection in progress...title>
     <meta name="description" content="Sito per Gara Robocup">
     <meta name="keywords" content="">
     <meta name="author" content="">
