--- a/slide/index.html
+++ b/slide/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Redirection in progress</title>
+    <title>Redirection in progress...</title>
     <meta name="description" content="Sito per Gara Robocup">
     <meta name="keywords" content="">
     <meta name="author" content="">
